2026-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/xptr.cpp (getCalendar): Simplify removing a helper function,
	cross-reference `setCalendar`, update example
	* src/dates.cpp (setCalendar): Reference `getCalendar`, update docs
	* man/getCalendar.Rd: Updated
	* man/setCalendar.Rd: Idem

2026-02-07  Dirk Eddelbuettel  <edd@debian.org>

	* src/dates.cpp (isHoliday,isWeekend): Extend generalization
	(createDatevector,getCalendarInstance): Factor out helper functions
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem
	* man/isHoliday.Rd: Updated documentation

2026-02-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/xptr.cpp (getCalendar): Renamed from getXPtr, added
	documentation
	* man/getCalendar.Rd: New documentation
	* man/getName.Rd: Updated documentation
	* man/isBusinessDay.Rd: Idem
	* src/dates.cpp (isBusinessDay): Generalized making date vector
	optional using current date, also allow calendar external pointer
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem
	* src/Makevars.win: Add xptr.cpp

2026-02-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/xptr.cpp: Initial proof of concept use of XPtr
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem
	* man/getName.Rd: Idem
	* src/Makevars.in: Add xptr.cpp
	* R/xptr.R: Minimal S3 wrapper
	* R/dates.R: Moved two functions to xptr.R
	* NAMESPACE: Additional exports

2026-02-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/qlcal_as_wrap.h: Use inline throughout

2026-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/*: Updated three files from QuantLib 1.41

2026-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Switch to actions/checkout@v6

2025-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp (QlCal::CalendarContainer::setCalendar): In the